[KOGITO-8599] Fix external component paging style in dark mode

--- a/packages/dashbuilder-component-table/static/index.css
+++ b/packages/dashbuilder-component-table/static/index.css
@@ -42,9 +42,36 @@
   --pf-global--BackgroundColor--100: #100c2a !important;
 }
 
-[mode="dark"] .pf-c-options-menu__menu {
+[mode="dark"] .pf-c-options-menu__menu,
+[mode="dark"] .pf-c-pagination__nav,
+[mode="dark"] .pf-c-pagination__total-items {
   background-color: #100c2a !important;
   color: #eef1fa;
+}
+
+[mode="dark"] .pf-c-pagination__nav {
+  display: inherit;
+  visibility: inherit;
+}
+
+[mode="dark"] .pf-l-flex {
+  justify-content: center;
+}
+
+[mode="dark"] .pf-m-align-left {
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.pf-l-flex {
+  justify-content: center;
+}
+
+.pf-m-align-left {
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 [mode="dark"] .pf-c-options-menu__menu-item:hover,
